--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,7 @@
           <title>Emma's Java Script Page</title>
      </head>
      <body>
-     <img src="">
+     <img src="3ed8d9139ee7fc659e006b40efb9cb82.jpg">
      <h1>My Javascript</h1>
      Back to <a href="index.html"> home page </ahttps://emmagould123.github.io>
      
