--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
          <title> Emma's Progamming Portfolio</title>
     </head>
     <body>
+        <img src"
     
     <h1>Welcome to Emma's Programming Portfolio</h1>
     
