--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
          <title> Emma's Progamming Portfolio</title>
     </head>
     <body>
-        <img src"
+        <img src="pasted image 0.png">
     
     <h1>Welcome to Emma's Programming Portfolio</h1>
     
