--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
          <title> Emma's Progamming Portfolio</title>
     </head>
     <body>
-        <img src="pasted image 0.png"> 
+        <img scr="csc106_banner.jpg">
+        <img scr="pasted image 0-4.png">  <img src="pasted image 0-1.png"> <img src="pasted image 0-2.png"> <img src="pasted image 0.png">
     
     <h1>Welcome to Emma's Programming Portfolio</h1>
     
