--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <img src="csc106_banner.jpg">
         <img src="pasted image 0-4.png">  <img src="pasted image 0-1.png"> <img src="pasted image 0-2.png"> <img src="pasted image 0.png">
     
-    <h1>Welcome to Emma's Programming Portfolio</h1>
+    <h1>Welcome to my Page!</h1>
+        <p> <em> Welcome to my programming portfolio. This is my first experience ever using code but so far I've been super interested with how unique the language of it is. <br>
+            I am a marine affairs major, but as stated in some of the previous videos for this class, code is prevelant in all sciences and day to day activities, so I'm excited to get familiar with it!</em> <p>
     
     </body>
 </html>
