--- a/javascripts.html
+++ b/javascripts.html
@@ -7,7 +7,7 @@
   <body>
   <img src=""csc106_banner.jpg" width="1110"> 
   <h1> My Javascript</h1>
-  Back to <a https://emmagould123.github.io/"> home page </a>
+  Back to <a https://emmagould123.github.io/" home page </a>
   
   </body>
   </html>
