--- a/javascripts.html
+++ b/javascripts.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <meta charset="utf-8">
-      <title>Emma's Javascripts Page </title>
-  </head>
-  <body>
-  <img src=""csc106_banner.jpg" width="1110"> 
-  <h1> My Javascript</h1>
-  Back to <a https://emmagould123.github.io/" home page </a>
+    <head>
+         <meta charset="utf-8">
+         <title> Emma's Progamming Portfolio</title>
+    </head>
+    <body>
+        <img src="csc106_banner.jpg" width="1110">
+        <img src="pasted image 0-4.png">  <img src="pasted image 0-1.png"> <img src="pasted image 0-2.png"> <img src="pasted image 0.png">
+      <p> <em> My Java Scripts Page </em> </p>
+      <h1> My Javascript</h1>
+  Back to <a https://emmagould123.github.io/"> home page </a>
   
-  </body>
-  </html>
+    </body>
+</html>
+
