--- a/apps.html
+++ b/apps.html
@@ -11,7 +11,7 @@
         
       <p> <em> My Apps Page </em> </p>
       <h1> Apps </h1>
-  Back to <a https://emmagould123.github.io/"> home page </a>
+ Back to <a href="https://emmagould123.github.io/"> home page </a>
   
     </body>
 </html>
