--- a/apps.html
+++ b/apps.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <img src="csc106_banner.jpg" width="1110">
-        <img src="pasted image 0-4.png">  <img src="pasted image 0-1.png"> <img src="pasted image 0-2.png"> <img src="pasted image 0.png">
+      < a href="javascripts.html" > <img src="pasted image 0-4.png"> </a>
+      <img src="pasted image 0-1.png"> 
+      <img src="pasted image 0-2.png"> 
+      <img src="pasted image 0.png">
         
       <p> <em> My Apps Page </em> </p>
       <h1> Apps </h1>
