--- a/apps.html
+++ b/apps.html
@@ -8,9 +8,9 @@
     <body>
         <img src="csc106_banner.jpg" width="1110">
       <a href="index.html"> <img src="pasted image 0-4.png"> </a>
-      <img src="pasted image 0-1.png"> 
-      <img src="pasted image 0-2.png"> 
-      <img src="pasted image 0.png">
+      <a href="javascripts.html"> <img src="pasted image 0-1.png"> </a>
+        <a href="apps.html"> <img src="pasted image 0-2.png"> </a>
+      <a href="aboutme.html"> <img src="pasted image 0.png"> </a>
         
       <p> <em> My Apps Page </em> </p>
       <h1> Apps </h1>
