--- a/apps.html
+++ b/apps.html
@@ -10,7 +10,7 @@
       <a href="index.html"> <img src="pasted image 0-4.png"> </a>
       <a href="javascripts.html"> <img src="pasted image 0-1.png"> </a>
         <a href="apps.html"> <img src="pasted image 0-2.png"> </a>
-      <a href="aboutme.html"> <img src="pasted image 0.png"> </a>
+      <a href="about.html"> <img src="pasted image 0.png"> </a>
         
       <p> <em> My Apps Page </em> </p>
       <h1> Apps </h1>
