--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <img src="csc106_banner.jpg" width="1110">
-        <img src="pasted image 0-4.png">  <img src="pasted image 0-1.png"> <img src="pasted image 0-2.png"> <img src="pasted image 0.png">
+        <img src="pasted image 0-4.png">  
+        <img src="pasted image 0-1.png"> 
+        <img src="pasted image 0-2.png"> 
+        <img src="pasted image 0.png">
     
     <h1>Welcome to my Page - AKA Emma's Programming Portfolio!</h1>
         <p> <em> Hi! My name is Emma and I'm from Maine. This is my first experience ever using code but so far I've been super interested with how unique the language of it is. <br>
