--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
          <title> Emma's Progamming Portfolio</title>
     </head>
     <body>
-        <img src="csc106_banner.jpg" width="1110">
+        <img src="myBanner.jpg" width="1110">
         <a href="index.html"> <img src="pasted image 0-4.png"> </a>
       <a href="javascripts.html"> <img src="pasted image 0-1.png"> </a>
         <a href="apps.html"> <img src="pasted image 0-2.png"> </a>
