--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <img src="myBanner.jpg" width="1110">
-        <a href="index.html"> <img src="pasted image 0-4.png"> </a>
-      <a href="javascripts.html"> <img src="pasted image 0-1.png"> </a>
-        <a href="apps.html"> <img src="pasted image 0-2.png"> </a>
-      <a href="aboutme.html"> <img src="pasted image 0.png"> </a>
+        <a href="index.html"> <img src="home.png"> </a>
+      <a href="javascripts.html"> <img src="javascripts.png"> </a>
+        <a href="apps.html"> <img src="apps.png"> </a>
+      <a href="aboutme.html"> <img src="aboutme.png"> </a>
     
     <h1>Welcome to my Page - AKA Emma's Programming Portfolio!</h1>
         <p> <em> Hi! My name is Emma and I'm from Maine. This is my first experience ever using code but so far I've been super interested with how unique the language of it is. <br>
