--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <img src="myBanner.jpg" width="1110">
-        <a href="index.html"> <img src="home.png"> </a>
+        <a href="index.html"> <img src="home.png" width="50" height="50"> </a>
       <a href="javascripts.html"> <img src="javascripts.png"> </a>
         <a href="apps.html"> <img src="apps.png"> </a>
       <a href="aboutme.html"> <img src="aboutme.png"> </a>
