--- a/javascripts.html
+++ b/javascripts.html
@@ -5,12 +5,12 @@
          <title> Emma's Progamming Portfolio</title>
     </head>
     <body>
-        <img src="csc106_banner.jpg" width="1110">
+        <img src="myBanner.jpg" width="1350">
+        <a href="index.html"> <img src="home.png" width="100" height="100"> </a>
+      <a href="javascripts.html"> <img src="javascripts.png"width="100" height="100"> </a>
+        <a href="apps.html"> <img src="apps.png"width="100" height="100"> </a>
+      <a href="aboutme.html"> <img src="aboutme.png"width="100" height="100"> </a>
         
-        <a href="index.html"> <img src="pasted image 0-4.png"> </a>
-      <a href="javascripts.html"> <img src="pasted image 0-1.png"> </a>
-        <a href="apps.html"> <img src="pasted image 0-2.png"> </a>
-      <a href="aboutme.html"> <img src="pasted image 0.png"> </a>
       <p> <em> My Java Scripts Page </em> </p>
       <h1> My Javascript</h1>
   Back to <a href="https://emmagould123.github.io/"> home page </a>
