--- a/aboutme.html
+++ b/aboutme.html
@@ -15,7 +15,7 @@
       <h1> About me</h1>
       <p> <em> My name is Emma Gould and I am from coastal Maine. I am super into backpacking and any outdoors activities. I am a marathon runner and have run two so far. <br
       I have two black lab dogs and one cat. My majors are Marine Affairs and Marine Biology.</em> </p>
-      <img src="emma.png" width="500" height="500"> 
+      <img src="emma.jpg" width="400" height="400"> 
       
       
  Back to <a href="https://emmagould123.github.io/"> home page </a>
