--- a/javascripts.html
+++ b/javascripts.html
@@ -11,6 +11,8 @@
         <a href="apps.html"> <img src="apps.png"width="100" height="100"> </a>
       <a href="aboutme.html"> <img src="aboutme.png"width="100" height="100"> </a>
         
+        <h2><a href="https://www.khanacademy.org/computer-programming/gould_bitmoji/5742473326575616">Gould_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/gould_bitmoji/5742473326575616/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
+        
       <p> <em> My Java Scripts Page </em> </p>
       <h1> My Javascript</h1>
   Back to <a href="https://emmagould123.github.io/"> home page </a>
