--- a/javascripts.html
+++ b/javascripts.html
@@ -10,7 +10,7 @@
       <a href="javascripts.html"> <img src="javascripts.png"width="100" height="100"> </a>
         <a href="apps.html"> <img src="apps.png"width="100" height="100"> </a>
       <a href="aboutme.html"> <img src="aboutme.png"width="100" height="100"> </a>
-        <img src=(IMG_1152 2.JPG)
+         <img src="IMG_1152 2.JPG" width="400" height="500">
         <h2><a href="https://www.khanacademy.org/computer-programming/gould_bitmoji/5742473326575616">Gould_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/gould_bitmoji/5742473326575616/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
         <h2><a href="https://www.khanacademy.org/computer-programming/gould_dancingbitmoji/4672862667620352">gould_dancingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/gould_dancingbitmoji/4672862667620352/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
         <h2><a href="https://www.khanacademy.org/computer-programming/gould_racingbitmoji/6289497954402304">gould_racingBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/gould_racingbitmoji/6289497954402304/embed.js?editor=no&buttons=no&author=no&embed=yes"></script><p>Made using: <a href="http://www.khanacademy.org/computer-programming">Khan Academy Computer Science</a></p>
